Catch corner case of unmodified order in model

BUG: 445467